# foresttrace

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
foresttrace/: __init__.py  dataset.py  features.py  plots.py
foresttrace/dataset/: data_pipeline.py  download_failed_naip.py  download_naip.py  download_osm.py  polygons_to_mask_tiles.py  rasterize_polygons.py  rasterize_to_single_mask.py  tile_mask.py
foresttrace/modeling/: predict.py  train.py
notebooks/: mask_rasterize.ipynb  polgyon_viewer.ipynb  tileize.ipynb  tilemaskcheck.ipynb
